--- a/style.css
+++ b/style.css
@@ -100,29 +100,65 @@ main {
     -ms-transform: translate(-50%, -50%);
     width: 100px;
 }
- .type1 {
+
+.type1 {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(450%, -300%);
     -ms-transform: translate(-50%, -50%);
     width: 20px;
- }
+}
 
- .type2 {
+.type2 {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(450%, -160%);
     -ms-transform: translate(-50%, -50%);
     width: 20px;
- }
+}
 
  @media screen and (max-width: 799px) {
     .pokedex {
         height: auto;
         width: 400px;
         position: relative;
+        content: url(images/background/pokedexPhone.png);
     }
     
+    .searchForm input[type=text] {
+        transform: translate(-70%, -430%);
+        width: 225px;
+    }
+
+    .searchForm .btn {
+        transform: translate(219%, -268%);
+    }
+
+    .searchForm .btn:hover {
+        transform: translate(219%, -268%);
+    }
+
+    #contPokemon {
+        transform: translate(-60%, 376%);
+    }
+
+    #imgPokemon .normal {
+        transform: translate(-85%, -10%);
+    }
+
+    #imgPokemon .shiny {
+        transform: translate(5%, -40%);
+    }
+
+    .type1 {
+        transform: translate(-710%, -120%);
+        width: 20px;
+    }
+    
+    .type2 {
+        transform: translate(-710%, 20%);
+        width: 20px;
+    }
  }
