--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+@font-face {
+    font-family: 'Pixel';
+    src: url(./font/PKMN\ RBYGSC.ttf) format('truetype');
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -9,6 +14,8 @@ html,body {
     background-color: darkgray;
     width: 100%;
     height: 100%;
+    font-family: 'Pixel';
+    font-size: 0.83em;
 }
 
 body {
@@ -75,12 +82,14 @@ main {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(33%, 333%);
+    transform: translate(33%, 345%);
     -ms-transform: translate(-50%, -50%);
     background-color: #F0F5E7;
     color: gray;
     width: 250px;
     height: 50px;
+    line-height: 1.8;
+    letter-spacing: 1px;
 }
 
 #imgPokemon .normal {
@@ -141,7 +150,7 @@ main {
     }
 
     #contPokemon {
-        transform: translate(-60%, 376%);
+        transform: translate(-60%, 387%);
     }
 
     #imgPokemon .normal {
